# gmacs

./: .gitignore  README.md  environment.yaml  pyproject.toml  tasks.py
examples/: call_peaks.py  get_consensus_peaks.py  run_gmacs.py
gmacs/: __init__.py  cli.py  gmacs.py  utils.py
