[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmacs"
version = "0.1.0"
description = "GPU-accelerated MACS3"
requires-python = ">=3.9"
dependencies = [
    "cudf-cu12",
    "numpy==1.26.4",
    "natsort==8.4.0",
    "pandas==2.1.1",
    "pyparsing==3.1.1",
    "pyproj==3.6.1",
    "scikit-image==0.24.0",
    "scipy==1.13.1",
    "pybedtools>=0.12.0",
]

[tool.setuptools]
packages = ["gmacs"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
